--- a/JumpGame/JumpGame.vcxproj
+++ b/JumpGame/JumpGame.vcxproj
@@ -141,7 +141,7 @@
   <ItemGroup>
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="Main.cpp" />
-    <ClCompile Include="Handle\ModelManager.cpp" />
+    <ClCompile Include="Map.cpp" />
     <ClCompile Include="Scene\MainScene.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="Scene\SceneManager.cpp" />
@@ -150,7 +150,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Camera.h" />
-    <ClInclude Include="Handle\ModelManager.h" />
+    <ClInclude Include="Map.h" />
     <ClInclude Include="Scene\MainScene.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="Scene\SceneManager.h" />
