--- a/JumpGame/JumpGame.vcxproj
+++ b/JumpGame/JumpGame.vcxproj
@@ -140,6 +140,9 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Camera.cpp" />
+    <ClCompile Include="Enemy\EnemyBee.cpp" />
+    <ClCompile Include="Enemy\EnemyBase.cpp" />
+    <ClCompile Include="Enemy\EnemyManager.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Map.cpp" />
     <ClCompile Include="Scene\MainScene.cpp" />
@@ -150,6 +153,9 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Camera.h" />
+    <ClInclude Include="Enemy\EnemyBee.h" />
+    <ClInclude Include="Enemy\EnemyBase.h" />
+    <ClInclude Include="Enemy\EnemyManager.h" />
     <ClInclude Include="Map.h" />
     <ClInclude Include="Scene\MainScene.h" />
     <ClInclude Include="Player.h" />
