--- a/JumpGame/JumpGame.vcxproj
+++ b/JumpGame/JumpGame.vcxproj
@@ -145,6 +145,7 @@
     <ClCompile Include="Enemy\EnemyManager.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Map.cpp" />
+    <ClCompile Include="Scene\SceneGameOver.cpp" />
     <ClCompile Include="Scene\MainScene.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="Scene\SceneManager.cpp" />
@@ -157,6 +158,7 @@
     <ClInclude Include="Enemy\EnemyBase.h" />
     <ClInclude Include="Enemy\EnemyManager.h" />
     <ClInclude Include="Map.h" />
+    <ClInclude Include="Scene\SceneGameOver.h" />
     <ClInclude Include="Scene\MainScene.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="Scene\SceneManager.h" />
