--- a/JumpGame/JumpGame.vcxproj
+++ b/JumpGame/JumpGame.vcxproj
@@ -145,6 +145,8 @@
     <ClCompile Include="Enemy\EnemyManager.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Map.cpp" />
+    <ClCompile Include="Scene\SceneTitle.cpp" />
+    <ClCompile Include="Scene\SceneClear.cpp" />
     <ClCompile Include="Scene\SceneGameOver.cpp" />
     <ClCompile Include="Scene\MainScene.cpp" />
     <ClCompile Include="Player.cpp" />
@@ -158,6 +160,8 @@
     <ClInclude Include="Enemy\EnemyBase.h" />
     <ClInclude Include="Enemy\EnemyManager.h" />
     <ClInclude Include="Map.h" />
+    <ClInclude Include="Scene\SceneTitle.h" />
+    <ClInclude Include="Scene\SceneClear.h" />
     <ClInclude Include="Scene\SceneGameOver.h" />
     <ClInclude Include="Scene\MainScene.h" />
     <ClInclude Include="Player.h" />
