--- a/JumpGame/JumpGame.vcxproj
+++ b/JumpGame/JumpGame.vcxproj
@@ -143,6 +143,7 @@
     <ClCompile Include="Enemy\EnemyBee.cpp" />
     <ClCompile Include="Enemy\EnemyBase.cpp" />
     <ClCompile Include="Enemy\EnemyManager.cpp" />
+    <ClCompile Include="Input.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Map.cpp" />
     <ClCompile Include="Scene\SceneTitle.cpp" />
@@ -159,6 +160,7 @@
     <ClInclude Include="Enemy\EnemyBee.h" />
     <ClInclude Include="Enemy\EnemyBase.h" />
     <ClInclude Include="Enemy\EnemyManager.h" />
+    <ClInclude Include="Input.h" />
     <ClInclude Include="Map.h" />
     <ClInclude Include="Scene\SceneTitle.h" />
     <ClInclude Include="Scene\SceneClear.h" />
