--- a/FlyAwayBird/FlyAwayBird.vcxproj
+++ b/FlyAwayBird/FlyAwayBird.vcxproj
@@ -144,10 +144,11 @@
     <ClCompile Include="Util\Input.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Player.cpp" />
-    <ClCompile Include="RecoveredItems.cpp" />
+    <ClCompile Include="RecoveredItem.cpp" />
     <ClCompile Include="Scene\SceneMain.cpp" />
     <ClCompile Include="Scene\SceneManager.cpp" />
     <ClCompile Include="Scene\SceneTitle.cpp" />
+    <ClCompile Include="WorldSprite.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Camera.h" />
@@ -155,10 +156,11 @@
     <ClInclude Include="Util\Game.h" />
     <ClInclude Include="Util\Input.h" />
     <ClInclude Include="Player.h" />
-    <ClInclude Include="RecoveredItems.h" />
+    <ClInclude Include="RecoveredItem.h" />
     <ClInclude Include="Scene\SceneMain.h" />
     <ClInclude Include="Scene\SceneManager.h" />
     <ClInclude Include="Scene\SceneTitle.h" />
+    <ClInclude Include="WorldSprite.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
