アイテムの種類を増やした

--- a/JumpJump/JumpJump.vcxproj
+++ b/JumpJump/JumpJump.vcxproj
@@ -143,6 +143,7 @@
     <ClCompile Include="Enemy\EnemyBee.cpp" />
     <ClCompile Include="Enemy\EnemyManager.cpp" />
     <ClCompile Include="Enemy\EnemyBase.cpp" />
+    <ClCompile Include="Item\ItemRotationMove.cpp" />
     <ClCompile Include="Item\ItemNotMove.cpp" />
     <ClCompile Include="Item\ItemManager.cpp" />
     <ClCompile Include="Item\ItemBase.cpp" />
@@ -167,6 +168,7 @@
     <ClInclude Include="Enemy\EnemyBee.h" />
     <ClInclude Include="Enemy\EnemyManager.h" />
     <ClInclude Include="Enemy\EnemyBase.h" />
+    <ClInclude Include="Item\ItemRotationMove.h" />
     <ClInclude Include="Item\ItemNotMove.h" />
     <ClInclude Include="Item\ItemManager.h" />
     <ClInclude Include="Item\ItemBase.h" />
