--- a/JumpJump/JumpJump.vcxproj.filters
+++ b/JumpJump/JumpJump.vcxproj.filters
@@ -117,6 +117,9 @@
     <ClCompile Include="Item\ItemNotMove.cpp">
       <Filter>ソース ファイル\Item</Filter>
     </ClCompile>
+    <ClCompile Include="Item\ItemRotationMove.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Player.h">
@@ -184,6 +187,9 @@
     </ClInclude>
     <ClInclude Include="Item\ItemNotMove.h">
       <Filter>ヘッダー ファイル\Item</Filter>
+    </ClInclude>
+    <ClInclude Include="Item\ItemRotationMove.h">
+      <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
