--- a/JumpJump_Test/JumpJump.vcxproj
+++ b/JumpJump_Test/JumpJump.vcxproj
@@ -140,6 +140,8 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Camera.cpp" />
+    <ClCompile Include="Circle.cpp" />
+    <ClCompile Include="Object\CharacterBase.cpp" />
     <ClCompile Include="Object\Model.cpp" />
     <ClCompile Include="Object\ObjectBase.cpp" />
     <ClCompile Include="Object\ObjectManager.cpp" />
@@ -162,12 +164,16 @@
     <ClCompile Include="Scene\SceneTest.cpp" />
     <ClCompile Include="Scene\SceneManager.cpp" />
     <ClCompile Include="Object\Stage\StageTest.cpp" />
+    <ClCompile Include="Util\Time.cpp" />
     <ClCompile Include="Util\Input.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Object\Player.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Camera.h" />
+    <ClInclude Include="Circle.h" />
+    <ClInclude Include="Object\CharacterBase.h" />
+    <ClInclude Include="Util\Time.h" />
     <ClInclude Include="Util\CharacterData.h" />
     <ClInclude Include="Object\Model.h" />
     <ClInclude Include="Object\ObjectBase.h" />
