--- a/JumpJump_Test/JumpJump.vcxproj
+++ b/JumpJump_Test/JumpJump.vcxproj
@@ -139,6 +139,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Object\Field.cpp" />
+    <ClCompile Include="Object\SkyDome.cpp" />
     <ClCompile Include="Util\Collision.cpp" />
     <ClCompile Include="Util\Context.cpp" />
     <ClCompile Include="Util\CsvLoad.cpp" />
@@ -180,6 +182,8 @@
     <ClCompile Include="Util\Vec2.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Object\Field.h" />
+    <ClInclude Include="Object\SkyDome.h" />
     <ClInclude Include="Util\Collision.h" />
     <ClInclude Include="Util\Context.h" />
     <ClInclude Include="Util\CsvLoad.h" />
